--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <table border="1">
+    <table width="100%/" border="1">
         <thead>
             <tr>
                 <th>person 1</th>
